# ewvx-converter

./: .gitignore  Cargo.toml  README.md
converter/: Cargo.toml
converter/src/: decode.rs  main.rs  trace.rs  xml.rs
ewvx/: Cargo.toml  README.md
ewvx/schema/: ewvx_2.0.xsd  ewvx_2.1.xsd
ewvx/src/: lib.rs  parser.rs  reader.rs  types.rs  writer.rs
extract/: Cargo.toml
extract/src/: main.rs
player/: Cargo.toml
player/src/: main.rs  parser.rs
schema/: schema.xsd
src/: decode.rs  main.rs  trace.rs  xml.rs
