[package]
name = "ewvx"
version = "1.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "Library for reading and writing EWVX (Ente Wurzel Video XML) files"
repository = "https://github.com/DemonicNomad/ewvx-converter"
readme = "README.md"
keywords = ["ewvx", "svg", "video", "xml"]
categories = ["multimedia::video", "multimedia::encoding"]

[dependencies]
anyhow = "1.0"

